--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,12 @@
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add new cities"
+        android:id="@+id/button2"
+        android:layout_alignBottom="@+id/my_recycler_view"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
