--- a/app/src/main/res/layout/cityinfo.xml
+++ b/app/src/main/res/layout/cityinfo.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
     <TextView
         android:layout_width="wrap_content"
@@ -10,6 +11,12 @@
         android:text="Medium Text"
         android:id="@+id/textView1" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back"
+        android:id="@+id/button3"
+        android:layout_gravity="center_horizontal" />
 
 
 </LinearLayout>
